--- a/gdb/config.in
+++ b/gdb/config.in
@@ -33,6 +33,9 @@
 /* Define to BFD's default target vector. */
 #undef DEFAULT_BFD_VEC
 
+/* Define to 1 if Linux Kernel Debug is enabled */
+#undef ENABLE_LKD
+
 /* Define to 1 if translation of program messages to the user's native
    language is requested. */
 #undef ENABLE_NLS
