--- a/makefile.st
+++ b/makefile.st
@@ -125,7 +125,7 @@ configure_host_armv7_gdb:
 		--enable-shtdi \
 		--enable-tui \
 		--with-expat=yes \
-		--with-python=no \
+		--with-python=yes \
 		--with-sysroot=/opt/STM/STLinux-2.4/devkit/armv7/target \
 		--with-separate-debug-dir=/opt/STM/STLinux-2.4/devkit/armv7/target/usr/lib/debug
 
