gdb/lkd: Add Linux Kernel Awareness target
Provide infrastructure and thread awareness for the Linux Kernel
This functionality is heavily derived from the functionality created
by ST Microelectronics which provides a greater feature set.

This specific implementation is stripped down to provide thread
awareness only. Other functionality that can already be provided by python
infrastructure such as information gathering tools specific to linux
have been submitted to the linux kernel project separately.

Kernel module support is also already working and available through the
python extensions provided by the linux kernel and has been removed from
this submission.

Current known limitations:
 * In this patch set there is a current known issue with handling of the
   internal gdb thread objects. The LKD_LOADING states allow the
   underlying target (in the usual case, the remote layer) to add
   threads which conflict with the thread objects created by LKD.

   This was not an issue in the ST usage as a custom remote layer
   specific to their underlying JTAG debugger (the STMC2) was used

 * If the user stops the target while it is executing in User Space the
   kernel awareness is unable to read memory in the protected regions of
   the MMU

   On ARM/SH, ST's implementation handles this by directly controlling the MMU
   from the LKD layers, and ensuring that the CPU can read the required
   memory regions. As there is no current generic API for manipulating
   an MMU over GDB's remote protocol, this functionality has been
   removed from this initial patch set.

--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -721,7 +721,8 @@ ALL_TARGET_OBS = \
 	symfile-mem.o \
 	windows-tdep.o \
 	linux-record.o \
-	ravenscar-thread.o
+	ravenscar-thread.o \
+	lkd-main.o lkd-process.o
 
 # Host-dependent makefile fragment comes in here.
 @host_makefile_frag@
@@ -988,7 +989,7 @@ common/common-exceptions.h target/target.h common/symbol.h \
 common/common-regcache.h fbsd-tdep.h nat/linux-personality.h \
 common/fileio.h nat/x86-linux.h nat/x86-linux-dregs.h nat/amd64-linux-siginfo.h\
 nat/linux-namespaces.h arch/arm.h common/gdb_sys_time.h arch/aarch64-insn.h \
-tid-parse.h
+tid-parse.h lkd/lkd.h lkd/lkd-process.h
 
 # Header files that already have srcdir in them, or which are in objdir.
 
@@ -1355,6 +1356,7 @@ init.c: $(INIT_FILES)
 	    -e '/[a-z0-9A-Z_]*-exp.tab.[co]$$/d' \
 	    -e 's/\.[co]$$/.c/' \
 	    -e 's,signals\.c,common/signals\.c,' \
+	    -e 's,\(lkd-.*\.c\),lkd/\1,' \
 	    -e 's|^\([^  /][^     ]*\)|$(srcdir)/\1|g' | \
 	while read f; do \
 	    sed -n -e 's/^_initialize_\([a-z_0-9A-Z]*\).*/\1/p' $$f 2>/dev/null; \
@@ -1754,7 +1756,8 @@ ALLDEPFILES = \
 	xcoffread.c \
 	xstormy16-tdep.c \
 	xtensa-tdep.c xtensa-config.c \
-	xtensa-linux-tdep.c xtensa-linux-nat.c xtensa-xtregs.c
+	xtensa-linux-tdep.c xtensa-linux-nat.c xtensa-xtregs.c \
+	lkd/lkd-main.c lkd/lkd-process.c
 
 # Some files need explicit build rules (due to -Werror problems) or due
 # to sub-directory fun 'n' games.
@@ -2714,6 +2717,20 @@ py-value.o: $(srcdir)/python/py-value.c
 
 py-varobj.o: $(srcdir)/python/py-varobj.c
 	$(COMPILE) $(PYTHON_CFLAGS) $(srcdir)/python/py-varobj.c
+	$(POSTCOMPILE)
+
+#
+# gdb/lkd/ dependencies
+#
+# Need to explicitly specify the compile rule as make will do nothing
+# or try to compile the object file into the sub-directory.
+
+lkd-main.o: $(srcdir)/lkd/lkd-main.c
+lkd-process.o: $(srcdir)/lkd/lkd-process.c
+
+# Generalised lkd-compile rule
+lkd-%:
+	$(COMPILE) $<
 	$(POSTCOMPILE)
 
 #
