--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -723,7 +723,7 @@ ALL_TARGET_OBS = \
 	linux-record.o \
 	ravenscar-thread.o \
 	lkd-main.o lkd-process.o \
-	lkd-arm.o
+	lkd-arm.o lkd-aarch64.o
 
 # Host-dependent makefile fragment comes in here.
 @host_makefile_frag@
@@ -2726,6 +2726,7 @@ lkd-main.o: $(srcdir)/lkd/lkd-main.c
 lkd-process.o: $(srcdir)/lkd/lkd-process.c
 
 lkd-arm.o: $(srcdir)/lkd/lkd-arm.c
+lkd-aarch64.o: $(srcdir)/lkd/lkd-aarch64.c
 
 # Generalised lkd-compile rule
 lkd-%:
