squash! lkd: Add an Architecture Layer for ARMv7 targets
Ensure that the LKD header is defined as a dependancy on
the makefile rules. Otherwise, a change to the header will
not cause a rebuild of these files

--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -2729,7 +2729,7 @@ py-varobj.o: $(srcdir)/python/py-varobj.c
 lkd-main.o: $(srcdir)/lkd/lkd-main.c $(srcdir)/lkd/lkd.h
 lkd-process.o: $(srcdir)/lkd/lkd-process.c $(srcdir)/lkd/lkd.h
 
-lkd-arm.o: $(srcdir)/lkd/lkd-arm.c
+lkd-arm.o: $(srcdir)/lkd/lkd-arm.c $(srcdir)/lkd/lkd.h
 
 # Generalised lkd-compile rule
 lkd-%:
